--- a/gb/15/10/21/n4554702.md
+++ b/gb/15/10/21/n4554702.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/s2531/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/s2531/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/s2531/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/s2531/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/s2531/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/s2531/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/s2531/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/s2531/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/s2531/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/s2531/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/s2531/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>药物成本飙升 医保改革何去何从？</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2015年10月21日讯】（大纪元记者李平编译报导）环球邮报报导，亚省10岁女孩Katharina McGregor 7岁时被诊断出C型尼曼匹克症（NPD，一种胆固醇无法在体内正常代谢的疾病），每年药费得花12万。但不像安省等其他省，该疾病不在亚省<ahref="https://github.com/s2531/djy/blob/master/gb/tag/%E5%8C%BB%E4%BF%9D.md#1">医保</a>范围内。 <br />　　<br />对这家人来说，找到支付这笔巨额药费来源，可谓几经周折。开始，小女孩父亲雇主承诺报销所有药费，但后来<ahref="https://github.com/s2531/djy/blob/master/gb/tag/%E5%8C%BB%E4%BF%9D.md#1">医保</a>公司说最多只能报销1年费用。后来瑞士制药公司Actelion Pharmaceuticals愿意免费提供药物，同时小女孩的主治医生向省府寻求资助。后来，另一家医保公司同意提供1年医保费用，但此后药费怎么办，这家人却没有头绪。 <br />　　<br />McGregor一家人的经历，是许多面临巨额医药费家庭的典型写照。随着疑难病症越来越常见，越来越多人身患晚期癌症和类风湿关节炎及高胆固醇等慢性疾病，这一问题还会进一步恶化。</p>
+<p>【大纪元2015年10月21日讯】（大纪元记者李平编译报导）环球邮报报导，亚省10岁女孩Katharina McGregor 7岁时被诊断出C型尼曼匹克症（NPD，一种胆固醇无法在体内正常代谢的疾病），每年药费得花12万。但不像安省等其他省，该疾病不在亚省<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8C%BB%E4%BF%9D.md#1">医保</a>范围内。 <br />　　<br />对这家人来说，找到支付这笔巨额药费来源，可谓几经周折。开始，小女孩父亲雇主承诺报销所有药费，但后来<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8C%BB%E4%BF%9D.md#1">医保</a>公司说最多只能报销1年费用。后来瑞士制药公司Actelion Pharmaceuticals愿意免费提供药物，同时小女孩的主治医生向省府寻求资助。后来，另一家医保公司同意提供1年医保费用，但此后药费怎么办，这家人却没有头绪。 <br />　　<br />McGregor一家人的经历，是许多面临巨额医药费家庭的典型写照。随着疑难病症越来越常见，越来越多人身患晚期癌症和类风湿关节炎及高胆固醇等慢性疾病，这一问题还会进一步恶化。</p>
 <p>现有医保系统太分散</p>
-<p>数据显示，去年这类专科药物在处方药成本中所占比例大幅上升，逼近近290亿，给政府和提供医保的企业带来巨大经济压力（尤其还要考虑到国内一些处方药价格全球最高这一点）。另外，现在越来越多老年人寻求慢性疾病治疗，体验制度也有改进，能提前预知更多疾病，更是加大压力。 <br />　　<br />国内医保系统目前是相当分散。<ahref="https://github.com/s2531/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>保健信息研究所（CIHI）数据显示，目前处方药成本中，各级政府承担近42%。其中，省府和地区政府医保计划根据《加拿大医疗法》承担医院药物治疗成本，并根据病患年龄、收入和医疗等具体情况，为那些真正有需要的人承担处方药成本。对于原住民、犯人和军人来说，渥京作为药物采购方承担所有政府开支中的2%。药物成本中，近22%为个人买单，剩余36%则多由雇主提供的私人医保承担。</p>
+<p>数据显示，去年这类专科药物在处方药成本中所占比例大幅上升，逼近近290亿，给政府和提供医保的企业带来巨大经济压力（尤其还要考虑到国内一些处方药价格全球最高这一点）。另外，现在越来越多老年人寻求慢性疾病治疗，体验制度也有改进，能提前预知更多疾病，更是加大压力。 <br />　　<br />国内医保系统目前是相当分散。<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>保健信息研究所（CIHI）数据显示，目前处方药成本中，各级政府承担近42%。其中，省府和地区政府医保计划根据《加拿大医疗法》承担医院药物治疗成本，并根据病患年龄、收入和医疗等具体情况，为那些真正有需要的人承担处方药成本。对于原住民、犯人和军人来说，渥京作为药物采购方承担所有政府开支中的2%。药物成本中，近22%为个人买单，剩余36%则多由雇主提供的私人医保承担。</p>
 <p>药物成本压力大</p>
-<p>随着药物成本日益上升，无论是政府，还是医保公司或雇主，都感到前所未有压力。过去，国内企业一直非常注重员工医保投资，将之视为保证员工身体健康、提高员工生产力和留驻人才之重要手段，但近年专科药物成本不断上涨，使得许多企业开始纷纷悄悄削减这一投入。药物成本上涨，保险公司也吃不消。<ahref="https://github.com/s2531/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>人寿健康保险协会（CLHIA）政策开发兼医疗副会长弗兰克（Stephen Frank）说，人寿健康保险业已面临成本壁垒，改革迫在眉睫。 </p>
+<p>随着药物成本日益上升，无论是政府，还是医保公司或雇主，都感到前所未有压力。过去，国内企业一直非常注重员工医保投资，将之视为保证员工身体健康、提高员工生产力和留驻人才之重要手段，但近年专科药物成本不断上涨，使得许多企业开始纷纷悄悄削减这一投入。药物成本上涨，保险公司也吃不消。<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>人寿健康保险协会（CLHIA）政策开发兼医疗副会长弗兰克（Stephen Frank）说，人寿健康保险业已面临成本壁垒，改革迫在眉睫。 </p>
 <p>卑诗大学人口与公共卫生学院教授摩根（Steve Morgan）等人认为，今后药物保险讨论中，保险公司和雇主等私人机构，尤其是承担私人药物保险中最大成本压力的一些制造业、科技业、资源和运输等行业的大雇主，也要参与进来发声。</p>
 <p>昂贵专科药物成趋势</p>
 <p>在昂贵的专科药物兴起前，曾出现过一股药物热潮。1990年代末，立普妥（Lipitor）降脂药和Plavix血液稀释剂等大牌药物开始进入药柜，这些药物价格虽不那么昂贵，但也为制药业带巨大收入。近年，这些药物专利纷纷到期，为低成本仿制药扫清道路，为寻求其他生财途径，制药公司纷纷开发专科药物和生物制剂，即活细胞治疗药物，而不是像过去生产化学合成药物。 <br />　　<br />Express Scripts Canada公司（与保险公司、雇主和政府进行医疗保险计划成本和效率管理合作的医疗福利管理公司） 数据显示，过去1年中，这类专科药物和生物药物占私人医保计划药物报销数量的仅2%，但成本却占药物报销总成本的26.5%，到2020年，这一比例可能会飙升至35%。业内估计，新开发药物中，近60%为成本高昂的专科药物。 <br />　　<br />谈到专科药物，有几大复杂因素和趋势。一是专科药物很难复制，也就是说，即使替代治疗上市，也节省不了多少钱。二是治疗自身免疫性疾病等更为常见疾病的药物，目前上市价格都是当初一些疑难杂症药物才有的价格。如Gilead Sciences公司生产的治疗丙性肝炎的Harvoni，为期12周的一个疗程成本就高达7.1万元，如病情更为严重，成本则翻倍。目前国内被诊断出丙性肝炎的加人数量，估计有24.25万人。 <br />　　<br />治疗高胆固醇的药物，也从过去只花几元钱的标准普通药物转向一种动辄要花数千元的新型注射药物，目前保险业也在密切关注这一趋势。这种情况下，人们普遍感叹，要预见下一轮药物价格上涨趋势太难了。</p>
@@ -25,42 +25,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/14/11/28/n4306148.md#1">卑诗医疗等待时间21周 超全国平均</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/14/12/20/n4323034.md#1">健康医疗一周回顾(56)</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/14/12/25/n4326112.md#1">加拿大推出配偶工签试点计划</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/1/22/n4348511.md#1">澳洲政府被指责夸大国民健保支出增长</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/1/30/n4354853.md#1">奥巴马健保的实质</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/1/31/n4355491.md#1">美国中港居民超200万 学历收入高</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/2/5/n4359969.md#1">50国密议“全球医疗服务贸易协议”</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/4/13/n4410323.md#1">探亲老父摔成高位截瘫 天价医疗费愁煞女儿</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/4/20/n4415646.md#1">成功游说政府立法 华裔女律师致力老人事务</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/5/18/n4437395.md#1">香港国际医疗器材及用品展</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/11/28/n4306148.md#1">卑诗医疗等待时间21周 超全国平均</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/12/20/n4323034.md#1">健康医疗一周回顾(56)</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/12/25/n4326112.md#1">加拿大推出配偶工签试点计划</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/1/22/n4348511.md#1">澳洲政府被指责夸大国民健保支出增长</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/1/30/n4354853.md#1">奥巴马健保的实质</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/1/31/n4355491.md#1">美国中港居民超200万 学历收入高</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/2/5/n4359969.md#1">50国密议“全球医疗服务贸易协议”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/4/13/n4410323.md#1">探亲老父摔成高位截瘫 天价医疗费愁煞女儿</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/4/20/n4415646.md#1">成功游说政府立法 华裔女律师致力老人事务</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/5/18/n4437395.md#1">香港国际医疗器材及用品展</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/23/n2974481.md#1" target="_blank">鲜为人知的马克思之四：好斗的马克思</a></li><li><a href="https://github.com/s2531/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977516.md#1" target="_blank">生性胆小女博士 遇世纪邪恶却勇敢说不</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/20/n11334759.md#1" target="_blank">宋征时：迟浩田披露中共出卖大面积北方领土</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/7/n12168723.md#1">大陆储户巨额存款频消失 涉事银行说法惹议</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12171270.md#1">韩国瑜遭罢免后狂呛人 张雅琴：跟共产党真像</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169691.md#1">美海关查获一批中国制假钞 总值35.1万美元</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/9/n12172382.md#1">中共多架苏恺30战机入侵 台湾空军驱离</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169437.md#1">台湾安心旅游方案出炉 自由行最高补助2千元</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/6/n12166947.md#1">韩国瑜遭罢免 杜汶泽用简体字嘲讽获爆赞</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/6/n12167087.md#1">遭罢免 韩国瑜能东山再起？台名嘴下惊人断语</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169269.md#1">吴朋奉雨中告别式 演艺圈好友与爱犬送行</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12170284.md#1">吴尊补办延迟16年婚礼 见太太穿婚纱哽咽落泪</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12171460.md#1">郝海东效应？导演微博谈足球先生当总统遭禁</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/4/n12159940.md#1">一个庶民家族的故事 (6)没有半毛钱怎么过活? 祖父的活计</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/7/n12167819.md#1">睡觉时停止呼吸 美国男子看到无数天使唱歌</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169940.md#1">作恶太多 康生曹轶欧夫妇生前遭索命</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/7/12/27/n1956051.md#1">城市中的神殿——另类神殿故事</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169544.md#1">西班牙特殊小镇 完全被法国领土包围</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/s2531/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/s2531/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/10/21/n4554702.htm">药物成本飙升 医保改革何去何从？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/10/21/n4554702.htm">药物成本飙升 医保改革何去何从？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/s2531/djy/blob/master/gb/15/10/21/n4554702.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/s2531/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/s2531/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/s2531/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/15/10/21/n4554702.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
